Start setting up web layer validation tests